makes `mb_ereg` clear the `$regs` argument on failure

When `mb_ereg` failed to match, it didn't update the `$regs` argument.
Now it will always set it to the empty array.

Fixes bug #72711