ext/mbstring/tests/mb_ereg_basic.phpt
@@ -1,5 +1,5 @@
 --TEST--
-Test mb_ereg() function : basic functionality 
+Test mb_ereg() function : basic functionality
 --SKIPIF--
 <?php
 extension_loaded('mbstring') or die('skip');
@@ -8,7 +8,7 @@ function_exists('mb_ereg') or die("skip mb_ereg() is not available in this build
 --FILE--
 <?php
 /* Prototype  : int mb_ereg(string $pattern, string $string [, array $registers])
- * Description: Regular expression match for multibyte string 
+ * Description: Regular expression match for multibyte string
  * Source code: ext/mbstring/php_mbregex.c
  */
 
@@ -113,5 +113,6 @@ array(3) {
   string(8) "MTIzNA=="
 }
 bool(false)
-NULL
+array(0) {
+}
 Done
